--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     <!-- module - 05 -->
     <script type="module" src="./module-05/lesson-9/module-5-1.js"></script>
     <script type="module" src="./module-05/lesson-10/module-5-2.js"></script>
+
+    <!-- QA -->
+
+    <script type="module" src="./QA/QA-1-3-module"></script>
   </body>
 </html>
