--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <!-- QA -->
 
     <script type="module" src="./QA/QA-1-3-module"></script>
+    <script type="module" src="./QA/QA-4-5-module"></script>
   </body>
 </html>
