--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- QA -->
 
-    <script type="module" src="./QA/QA-1-3-module"></script>
-    <script type="module" src="./QA/QA-4-5-module"></script>
+    <script type="module" src="./QA/QA-1-3-module.js"></script>
+    <script type="module" src="./QA/QA-4-5-module.js"></script>
   </body>
 </html>
