--- a/module-06/lesson-12/lesson-12.html
+++ b/module-06/lesson-12/lesson-12.html
@@ -11,6 +11,59 @@
   </head>
 
   <body>
+
+    <!-- Task - 01 -->
+    <p class="task-title">Task 1</p>
+    <form class="contact-form js-contact-form">
+      <input
+        name="userName"
+        type="text"
+        class="contact-form-input js-username-input"
+        data-length="8"
+        required
+        placeholder="Your name"
+      />
+      <label class="js-policy-label">
+        <input
+          type="checkbox"
+          name="accept"
+          class="contact-form-checkbox js-policy-checkbox"
+        />
+        Я <span class="js-username-output">Anonymous</span> погоджуюсь із
+        політикою конфіденційності
+      </label>
+      <button type="submit" class="contact-form-btn js-contact-form-submit">
+        Відправити
+      </button>
+    </form>
+
+    <!-- Task - 02 -->
+    <p class="task-title">Task 2</p>
+    <div class="input-container">
+      <input class="js-password-input" type="text" />
+      <button class="js-password-button">Приховати</button>
+    </div>
+
+    <!-- Task - 03 -->
+    <p class="task-title">Task 3</p>
+    <div class="eventThumb"></div>
+
+    <!-- Task - 04 -->
+    <p class="task-title">Task 4</p>
+    <div>
+      <div class="box"></div>
+      <button class="js-decrease" id="decrease">Зменьшити</button>
+      <button class="js-increase" id="increase">Збільшити</button>
+    </div>
+
+    <!-- Task - 05 -->
+    <p class="task-title">Task 5</p>
+    <div>
+      <div class="outer-circle">
+        <div class="inner-circle"></div>
+      </div>
+    </div>
+    
     <script type="module" src="./module-6-2.js"></script>
   </body>
 </html>
