--- a/module-06/lesson-12/lesson-12.html
+++ b/module-06/lesson-12/lesson-12.html
@@ -40,7 +40,7 @@
     <!-- Task - 02 -->
     <p class="task-title">Task 2</p>
     <div class="input-container">
-      <input class="js-password-input" type="text" />
+      <input class="js-password-input" type="text" name="password"/>
       <button class="js-password-button">Приховати</button>
     </div>
 
