--- a/module-07/lesson-14/lesson-14.html
+++ b/module-07/lesson-14/lesson-14.html
@@ -24,6 +24,18 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+
+<!-- Task - 01 -->
+    <section>
+      <div class="container">
+        <p class="task-title">Task 01</p>
+
+        <button type="button" class="modal-open js-modal-open">
+          Відкрити модалку
+        </button>
+      </div>
+    </section>
+
     <!-- lodash -->
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
