--- a/module-07/lesson-14/lesson-14.html
+++ b/module-07/lesson-14/lesson-14.html
@@ -35,6 +35,7 @@
         </button>
       </div>
     </section>
+    <!-- <input type="text" name="username" class="js-user-input"> -->
 
     <!-- lodash -->
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
