--- a/QA/QA-6-7-module/index.html
+++ b/QA/QA-6-7-module/index.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <!-- Task -1 -->
@@ -65,6 +65,6 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./QA-6-7-module.js"></script>
   </body>
 </html>
