--- a/QA/QA-6-7-module/index.html
+++ b/QA/QA-6-7-module/index.html
@@ -42,6 +42,7 @@
         <ul class="js-todos-list">
           <!-- сюди будуть додаватися елементи списку -->
         </ul>
+        <p class="text is-hidden js-text">To do is empty</p>
       </div>
     </section>
 
