--- a/module-09/lesson-17/index.html
+++ b/module-09/lesson-17/index.html
@@ -4,32 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lesson 17</title>
-    <link rel="stylesheet" href="./css/bg-slider.css">
+    <link rel="stylesheet" href="./css/bg-slider.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-
     <!-- Task - 01 -->
     <section>
       <div class="container">
         <a class="task-title" href="./pages/calendar.html">Task 01</a>
-
-     
-      </div>
-    </section>
-
-    <!-- Task - 02 -->
-    <section>
-      <div class="container">
-        <p class="task-title">Task 02</p>
-
-        <h2>Age Calculator</h2>
-        <div class="form">
-          <label for="birthday">Enter you date of birth</label>
-          <input type="date" class="js-input" name="birthday" />
-          <button class="js-form-btn">Calculate Age</button>
-          <p class="js-form-result"></p>
-        </div>
+        <a href="./pages/age-calculator.html" class="task-title">Task 02</a>
       </div>
     </section>
 
@@ -40,7 +23,5 @@
         <a href="./pages/bodyImage.html">Change body images</a>
       </div>
     </section>
-
- 
   </body>
 </html>
