--- a/module-09/lesson-17/pages/bodyImage.html
+++ b/module-09/lesson-17/pages/bodyImage.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Change Background</title>
-    <link rel="stylesheet" href="../css/slider.css" />
+    <link rel="stylesheet" href="../css/bg-slider.css" />
   </head>
   <body>
     <a href="../index.html">Home</a>
 
-    <script type="module" src="../js/changeBody.js"></script>
+    <script type="module" src="../js/change-bg.js"></script>
   </body>
 </html>
