update index.html, add class for task-3

--- a/module-09/lesson-17/index.html
+++ b/module-09/lesson-17/index.html
@@ -14,9 +14,8 @@
         <a class="task-title" href="./pages/calendar.html">Task 01</a>
         <a href="./pages/age-calculator.html" class="task-title">Task 02</a>
 
-        <a href="./pages/bodyImage.html">Change body images</a>
+        <a class="task-title" href="./pages/bodyImage.html">Task 03</a>
       </div>
     </section>
-    
   </body>
 </html>
