--- a/QA/QA-8-9-module/index.html
+++ b/QA/QA-8-9-module/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QA 8 - 9</title>
 
-    <link rel="stylesheet" href="./css/main.css">
-</head>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
 
-<body>
+  <body>
     <a href="./counter.html">Counter</a>
-</body>
-
+    <a href="./themeSwitch.html">Counter</a>
+  </body>
 </html>
