task 3 and 5 qa 8-9

--- a/QA/QA-8-9-module/index.html
+++ b/QA/QA-8-9-module/index.html
@@ -9,7 +9,9 @@
   </head>
 
   <body>
+    <a href="./favourite-food.html">Favourite food</a>
     <a href="./counter.html">Counter</a>
     <a href="./themeSwitch.html">Counter</a>
+    <script type="module" src="./js/start-timer.js"></script>
   </body>
 </html>
