--- a/module-10/lesson-19-20.html
+++ b/module-10/lesson-19-20.html
@@ -16,5 +16,7 @@
     <!-- base styles -->
     <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- <script type="module" src="./js/jsonplaceholder.js"></script> -->
+  </body>
 </html>
