--- a/module-10/lesson-19-20.html
+++ b/module-10/lesson-19-20.html
@@ -18,5 +18,7 @@
   </head>
   <body>
     <!-- <script type="module" src="./js/jsonplaceholder.js"></script> -->
+    <script type="module" src="./js/students-api.js"></script>
+
   </body>
 </html>
