--- a/module-10/lesson-19-20.html
+++ b/module-10/lesson-19-20.html
@@ -17,6 +17,23 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+
+    <section>
+      <div class="container">
+        <button class="modal-open js-modal-btn" type="button">
+          Open modal
+        </button>
+
+        <ul class="gallery"></ul>
+
+        <p class="empty-students is-hidden">
+          There are no students here yet...
+        </p>
+        <span class="loader is-hidden"></span>
+      </div>
+    </section>
+
+
     <!-- <script type="module" src="./js/jsonplaceholder.js"></script> -->
     <script type="module" src="./js/students-api.js"></script>
 
