--- a/module-10/lesson-19-20.html
+++ b/module-10/lesson-19-20.html
@@ -12,12 +12,18 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+    "
+      rel="stylesheet"
+    />
 
     <!-- base styles -->
     <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body>
 
+  <body>
     <section>
       <div class="container">
         <button class="modal-open js-modal-btn" type="button">
@@ -33,9 +39,9 @@
       </div>
     </section>
 
-
-    <!-- <script type="module" src="./js/jsonplaceholder.js"></script> -->
-    <script type="module" src="./js/students-api.js"></script>
-
+    <script src="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+"></script>
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
