--- a/module-11/lesson-21/lesson-21.html
+++ b/module-11/lesson-21/lesson-21.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesson-21</title>
+    <title>Lesson 21</title>
   </head>
-  <body></body>
+  <body>
+    <ul class="gallery js-gallery"></ul>
+
+    <button class="js-load-more-btn">Load More</button>
+
+  </body>
 </html>
