--- a/module-11/lesson-21/lesson-21.html
+++ b/module-11/lesson-21/lesson-21.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lesson 21</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <ul class="gallery js-gallery"></ul>
 
-    <button class="js-load-more-btn">Load More</button>
-
+    <button class="js-load-more-btn is-hidden">Load More</button>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
+      integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script type="module" src="./js/jsonplaceholder-api.js"></script>
   </body>
 </html>
