--- a/module-11/lesson-22/lesson-22.html
+++ b/module-11/lesson-22/lesson-22.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lesson 22</title>
 
-    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,8 +12,40 @@
       rel="stylesheet"
     />
 
-    <!-- base css -->
-    <link rel="stylesheet" href="./css/main.css" />
+    <!--  -->
+    <link
+      href="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <section>
+      <div class="container">
+        <button class="modal-open js-modal-btn" type="button">
+          Open modal
+        </button>
+
+        <ul class="gallery"></ul>
+
+        <p class="empty-students is-hidden">
+          There are no students here yet...
+        </p>
+        <span class="loader is-hidden"></span>
+      </div>
+    </section>
+
+    <!--  -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <!--  -->
+    <script src="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+"></script>
+    <!--  -->
+    <script type="module" src="./js/app.js"></script>
+  </body>
 </html>
