--- a/module-11/lesson-22/lesson-22.html
+++ b/module-11/lesson-22/lesson-22.html
@@ -46,6 +46,8 @@ https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
 https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
 "></script>
     <!--  -->
-    <script type="module" src="./js/app.js"></script>
+    <!-- <script type="module" src="./js/app.js"></script> -->
+    <script type="module" src="./js/students-api.js"></script>
+
   </body>
 </html>
