--- a/module-11/lesson-22/lesson-22.html
+++ b/module-11/lesson-22/lesson-22.html
@@ -20,7 +20,7 @@ https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <section>
@@ -46,8 +46,7 @@ https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
 https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
 "></script>
     <!--  -->
-    <!-- <script type="module" src="./js/app.js"></script> -->
-    <script type="module" src="./js/students-api.js"></script>
-
+    <script type="module" src="./js/app.js"></script>
+    <!-- <script type="module" src="./js/students-api.js"></script> -->
   </body>
 </html>
